--- a/board.ui
+++ b/board.ui
@@ -2,13 +2,19 @@
 <ui version="4.0">
  <class>Board</class>
  <widget class="QMainWindow" name="Board">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>795</width>
+    <height>606</height>
    </rect>
+  </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="windowTitle">
    <string>Board</string>
@@ -17,11 +23,17 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>5</x>
-      <y>1</y>
+      <x>0</x>
+      <y>0</y>
       <width>791</width>
-      <height>551</height>
+      <height>561</height>
      </rect>
+    </property>
+    <property name="acceptDrops">
+     <bool>true</bool>
+    </property>
+    <property name="interactive">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -30,7 +42,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>795</width>
      <height>22</height>
     </rect>
    </property>
