--- a/board.ui
+++ b/board.ui
@@ -33,6 +33,16 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLineEdit" name="leGameMessage">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>510</y>
+      <width>341</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
