Completed class inheritance.

--- a/mainmenu.ui
+++ b/mainmenu.ui
@@ -39,7 +39,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="aiPlayBtn">
        <property name="text">
         <string>One player</string>
        </property>
@@ -72,7 +72,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
